Add radio buttons

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>QuizApp</title>
-</head>
-<body>
-	<h1>Hello my People</h1>
-	<script src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>QuizApp</title>
+  </head>
+  <body>
+    <div class="quiz-container">
+      <h2>Question Text</h2>
+      <ul>
+        <li>
+          <input type="radio" id="a" name="answer" /><label for="a"
+            >Question</label
+          >
+        </li>
+        <li>
+          <input type="radio" id="b" name="answer" /><label for="b"
+            >Question</label
+          >
+        </li>
+        <li>
+          <input type="radio" id="c" name="answer" /><label for="c"
+            >Question</label
+          >
+        </li>
+        <li>
+          <input type="radio" id="d" name="answer" /><label for="d"
+            >Question</label
+          >
+        </li>
+      </ul>
+      <button>Submit</button>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
